# spacy-richtext-utils

./: README.md  pyproject.toml
example/: example.ipynb
src/: __init__.py  common_usage.py  pipe_steps.py  tokenizer.py
